--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <div id="arena-wrapper">
     <div id="arena">
         <div id="hover-rect"></div>
         <div id="inventory"></div>
         <div id="packing-area"></div>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
