--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="packing-area"></div>
     </div>
     </div>
-    <div id="stats-bar"></div>
+    <div class="bar" id="stats-bar"></div>
     <script src="script.js"></script>
 </body>
 </html>
