--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id="packing-area"></div>
     </div>
     </div>
+    <div class="bar" id="item-info-bar"></div>
     <div class="bar" id="stats-bar"></div>
     <script src="script.js"></script>
 </body>
