--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <div class="bar" id="item-info-bar"></div>
     <div class="bar" id="stats-bar"></div>
     <script src="script.js"></script>
+    <script src="loaders.js"></script>
+    <script src="algo.js"></script>
+    <script>main();</script>
 </body>
 </html>
