--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="bar" id="item-info-bar"></div>
     <div class="bar" id="stats-bar"></div>
+    <input type="file" id="level-loader" accept=".json,application/json" style="display:none" />
     <script src="script.js"></script>
     <script src="loaders.js"></script>
     <script src="algo.js"></script>
