allow downloading progress

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="bar" id="item-info-bar"></div>
     <div class="bar" id="stats-bar"></div>
     <input type="file" id="level-loader" accept=".json,application/json" style="display:none" />
+    <a id="downloader"></a>
     <script src="script.js"></script>
     <script src="loaders.js"></script>
     <script src="algo.js"></script>
