seo improvements: add meta tag and nofollow #downloader

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="A 2D geometric bin-packing game that runs in the browser. You have to pack all rectangles from the left side into the minimum number of bins on the right side." />
 <title>Packing game</title>
 <link rel="stylesheet" href="style.css" />
 </head>
@@ -56,7 +57,7 @@
     <div class="bar" id="item-info-bar"></div>
     <div class="bar" id="stats-bar"></div>
     <input type="file" id="level-loader" accept=".json,application/json" style="display:none" />
-    <a id="downloader"></a>
+    <a id="downloader" rel="nofollow"></a>
     <script src="script.js"></script>
     <script src="loaders.js"></script>
     <script src="algo.js"></script>
