--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 <script src="script.js"></script>
 <script src="loaders.js"></script>
 <script src="algo.js"></script>
-<script>main();</script>
+<script src="extra-ui.js"></script>
+<script>
+addEventListeners();
+loadGameFromQParams(getQParams());
+addExtraUIEventListeners();
+</script>
 </body>
 </html>
