--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
             </div>
             <button id="ng-submit" type="submit">Submit</button>
         </form>
+        <ul id="msg-list">
+        </ul>
     </div>
     <div id="arena">
         <div id="hover-rect"></div>
