ngForm: remove default choice and forbid empty submit

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <p>Levels:</p>
                 <div>
-                    <input type="radio" id="ng-radio-url-1" name="ng-choice" value="url:levels/bp/1.json" checked />
+                    <input type="radio" id="ng-radio-url-1" name="ng-choice" value="url:levels/bp/1.json" />
                     <label for="ng-radio-url-1">Level 1</label>
                 </div>
                 <div>
@@ -55,7 +55,7 @@
                     <label for="ng-radio-gen-bp1">BP1</label>
                 </div>
             </div>
-            <button id="ng-submit" type="submit">Submit</button>
+            <button id="ng-submit" type="submit" disabled="disabled">Submit</button>
         </form>
         <div id="solve-menu" class="menu disabled">
             <div class="heading">View solution</div>
