--- a/index.html
+++ b/index.html
@@ -36,24 +36,14 @@
         <form id="ng-form" class="menu disabled">
             <div class="heading">Load a new game</div>
             <div class="options">
-                <div>
+                <div class="input-pair">
                     <input type="radio" id="ng-radio-upload" name="ng-choice" value="upload:" />
                     <label for="ng-radio-upload">Choose file on disk</label>
                 </div>
                 <p>Levels:</p>
-                <div>
-                    <input type="radio" id="ng-radio-url-1" name="ng-choice" value="url:levels/bp/1.json" />
-                    <label for="ng-radio-url-1">Level 1</label>
-                </div>
-                <div>
-                    <input type="radio" id="ng-radio-url-2" name="ng-choice" value="url:levels/bp/2.json" />
-                    <label for="ng-radio-url-2">Level 2</label>
-                </div>
+                <div id="ng-form-levels"></div>
                 <p>Generators:</p>
-                <div>
-                    <input type="radio" id="ng-radio-bp1" name="ng-choice" value="gen:bp1" />
-                    <label for="ng-radio-gen-bp1">BP1</label>
-                </div>
+                <div id="ng-form-gens"></div>
             </div>
             <button id="ng-submit" type="submit" disabled="disabled">Submit</button>
         </form>
