--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 <div id="ng-form-levels"></div>
                 <p>Generators:</p>
                 <div id="ng-form-gens"></div>
+                <div id="ng-form-gen-params-wrapper" class="disabled">
+                    <p id="ng-form-gen-params-header">Generator parameters:</p>
+                    <div id="ng-form-gen-params"></div>
+                </div>
             </div>
             <button id="ng-submit" type="submit" disabled="disabled">Submit</button>
         </form>
