--- a/index.html
+++ b/index.html
@@ -8,73 +8,71 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div id="arena-wrapper">
-    <div id="controls">
-        <ul id="nav">
-            <li id="new-game-button" class="enabled" title="New game">+</li>
-            <li id="undo-button" class="disabled" title="Undo">
-                <svg class="icon" id="undo-icon"><title>Undo</title>
-                    <use xlink:href="sprites.svg#fa-undo"/></svg>
-            </li>
-            <li id="save-game-button" class="enabled" title="Save game">
-                <svg class="icon" id="save-icon"><title>Save game</title>
-                    <use xlink:href="sprites.svg#fa-save"/></svg>
-            </li>
-            <li id="unpack-button" class="enabled" title="Clear">
-                <svg class="icon" id="unpack-icon"><title>Clear</title>
-                    <use xlink:href="sprites.svg#fa-broom"/></svg>
-            </li>
-            <li id="solve-button" class="enabled" title="Show solutions">&#9654;</li>
-            <!--
-            <li id="export-img-button" class="disabled" title="Export as image">
-                <svg class="icon" id="export-img-icon"><title>Export as image</title>
-                    <use xlink:href="sprites.svg#fa-file-image"/></svg>
-            </li>
-            -->
-            <li id="about-button" class="enabled" title="About">?</li>
-        </ul>
-        <form id="ng-form" class="menu disabled">
-            <div class="heading">Load a new game</div>
-            <div class="options">
-                <div class="input-pair">
-                    <input type="radio" id="ng-radio-upload" name="ng-choice" value="upload:" />
-                    <label for="ng-radio-upload">Choose file on disk</label>
-                </div>
-                <p>Levels:</p>
-                <div id="ng-form-levels"></div>
-                <p>Generators:</p>
-                <div id="ng-form-gens"></div>
-                <div id="ng-form-gen-params-wrapper" class="disabled">
-                    <p id="ng-form-gen-params-header">Generator parameters:</p>
-                    <div id="ng-form-gen-params"></div>
-                </div>
+<header>
+    <ul id="toolbar">
+        <li id="new-game-button" class="enabled" title="New game">+</li>
+        <li id="undo-button" class="disabled" title="Undo">
+            <svg class="icon" id="undo-icon"><title>Undo</title>
+                <use xlink:href="sprites.svg#fa-undo"/></svg>
+        </li>
+        <li id="save-game-button" class="enabled" title="Save game">
+            <svg class="icon" id="save-icon"><title>Save game</title>
+                <use xlink:href="sprites.svg#fa-save"/></svg>
+        </li>
+        <li id="unpack-button" class="enabled" title="Clear">
+            <svg class="icon" id="unpack-icon"><title>Clear</title>
+                <use xlink:href="sprites.svg#fa-broom"/></svg>
+        </li>
+        <li id="solve-button" class="enabled" title="Show solutions">&#9654;</li>
+        <!--
+        <li id="export-img-button" class="disabled" title="Export as image">
+            <svg class="icon" id="export-img-icon"><title>Export as image</title>
+                <use xlink:href="sprites.svg#fa-file-image"/></svg>
+        </li>
+        -->
+        <li id="about-button" class="enabled" title="About">?</li>
+    </ul>
+    <form id="ng-form" class="menu disabled">
+        <div class="heading">Load a new game</div>
+        <div class="options">
+            <div class="input-pair">
+                <input type="radio" id="ng-radio-upload" name="ng-choice" value="upload:" />
+                <label for="ng-radio-upload">Choose file on disk</label>
             </div>
-            <button id="ng-submit" type="submit" disabled="disabled">Submit</button>
-        </form>
-        <div id="solve-menu" class="menu disabled">
-            <div class="heading">View solution</div>
-            <ul id="solve-list"></ul>
+            <p>Levels:</p>
+            <div id="ng-form-levels"></div>
+            <p>Generators:</p>
+            <div id="ng-form-gens"></div>
+            <div id="ng-form-gen-params-wrapper" class="disabled">
+                <p id="ng-form-gen-params-header">Generator parameters:</p>
+                <div id="ng-form-gen-params"></div>
+            </div>
         </div>
-        <ul id="msg-list"></ul>
+        <button id="ng-submit" type="submit" disabled="disabled">Submit</button>
+    </form>
+    <div id="solve-menu" class="menu disabled">
+        <div class="heading">View solution</div>
+        <ul id="solve-list"></ul>
     </div>
-    <div id="arena">
-        <div id="hover-rect"></div>
-        <div id="inventory"></div>
-        <div id="packing-area"></div>
-    </div>
-</div>
-<div class="bar" id="item-info-bar"></div>
-<div class="bar" id="stats-bar"></div>
-<input type="file" id="level-loader" accept=".json,application/json" style="display:none" />
-<a id="downloader" rel="nofollow"></a>
-<script src="script.js"></script>
-<script src="loaders.js"></script>
-<script src="algo.js"></script>
-<script src="extra-ui.js"></script>
-<script>
-addEventListeners();
-loadGameFromQParams(getQParams());
-addExtraUIEventListeners();
-</script>
+    <ul id="msg-list"></ul>
+</header>
+<main id="arena">
+    <div id="hover-rect"></div>
+    <div id="inventory"></div>
+    <div id="packing-area"></div>
+</main>
+<div id="gas"></div>
+<footer id="footer">
+    <div class="bar" id="item-info-bar"></div>
+    <div class="bar" id="stats-bar"></div>
+</footer>
+<section id="invisible-section">
+    <input type="file" id="level-loader" accept=".json,application/json" style="display:none" />
+    <a id="downloader" rel="nofollow"></a>
+    <script src="script.js"></script>
+    <script src="loaders.js"></script>
+    <script src="algo.js"></script>
+    <script src="extra-ui.js"></script>
+</section>
 </body>
 </html>
