--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 </head>
 <body>
 <header>
-    <ul id="toolbar">
-        <li id="new-game-button" class="enabled" title="New game">+</li>
+    <ul id="main-toolbar" class="toolbar">
+        <li id="new-game-button" title="New game">+</li>
         <li id="undo-button" class="disabled" title="Undo">
             <svg class="icon" id="undo-icon"><title>Undo</title>
                 <use xlink:href="sprites.svg#fa-undo"/></svg>
         </li>
-        <li id="save-game-button" class="enabled" title="Save game">
+        <li id="save-game-button" title="Save game">
             <svg class="icon" id="save-icon"><title>Save game</title>
                 <use xlink:href="sprites.svg#fa-save"/></svg>
         </li>
-        <li id="unpack-button" class="enabled" title="Clear">
+        <li id="unpack-button" title="Clear">
             <svg class="icon" id="unpack-icon"><title>Clear</title>
                 <use xlink:href="sprites.svg#fa-broom"/></svg>
         </li>
-        <li id="solve-button" class="enabled" title="Show solutions">&#9654;</li>
+        <li id="solve-button" title="Show solutions">&#9654;</li>
         <!--
         <li id="export-img-button" class="disabled" title="Export as image">
             <svg class="icon" id="export-img-icon"><title>Export as image</title>
                 <use xlink:href="sprites.svg#fa-file-image"/></svg>
         </li>
         -->
-        <li id="about-button" class="enabled" title="About">?</li>
+        <li id="about-button" title="About">?</li>
     </ul>
     <form id="ng-form" class="menu disabled">
         <div class="heading">Load a new game</div>
