add zoom button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <svg class="icon" id="undo-icon"><title>Undo</title>
                 <use xlink:href="sprites.svg#fa-undo"/></svg>
         </li>
+        <li id="zoom-button" title="Zoom">
+            <svg class="icon" id="zoom-icon"><title>Zoom</title>
+                <use xlink:href="sprites.svg#fa-search-pm"/></svg>
+        </li>
         <li id="save-game-button" title="Save game">
             <svg class="icon" id="save-icon"><title>Save game</title>
                 <use xlink:href="sprites.svg#fa-save"/></svg>
@@ -54,6 +58,24 @@
         <div class="heading">View solution</div>
         <ul id="solve-list"></ul>
     </div>
+    <ul id="zoom-toolbar" class="toolbar disabled">
+        <li id="zoom-in-button" title="Zoom in">
+            <svg class="icon" id="zoom-in-icon"><title>Zoom in</title>
+                <use xlink:href="sprites.svg#fa-search-plus"/></svg>
+        </li>
+        <li id="zoom-out-button" title="Zoom out">
+            <svg class="icon" id="zoom-out-icon"><title>Zoom out</title>
+                <use xlink:href="sprites.svg#fa-search-minus"/></svg>
+        </li>
+        <li id="zoom-x-button" title="Fit horizontally">
+            <svg class="icon" id="zoom-x-icon"><title>Fit horizontally</title>
+                <use xlink:href="sprites.svg#fa-arrows-alt-h"/></svg>
+        </li>
+        <li id="zoom-y-button" title="Fit vertically">
+            <svg class="icon" id="zoom-y-icon"><title>Fit vertically</title>
+                <use xlink:href="sprites.svg#fa-arrows-alt-v"/></svg>
+        </li>
+    </ul>
     <ul id="msg-list"></ul>
 </header>
 <main id="arena">
