--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             <svg class="icon" id="undo-icon"><title>Undo</title>
                 <use xlink:href="sprites.svg#fa-undo"/></svg>
         </li>
+        <li id="redo-button" class="disabled" title="Redo" style="display: none;">
+            <svg class="icon" id="redo-icon" transform="scale(-1,1)"><title>Redo</title>
+                <use xlink:href="sprites.svg#fa-undo"/></svg>
+        </li>
         <li id="zoom-button" title="Zoom">
             <svg class="icon" id="zoom-icon"><title>Zoom</title>
                 <use xlink:href="sprites.svg#fa-search-pm"/></svg>
