use `display: none` on #item-info-bar
Using `visibility: hidden` was capturing touch events.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </main>
 <div id="gas"></div>
 <footer id="footer">
-    <div class="bar" id="item-info-bar"></div>
+    <div class="bar disabled" id="item-info-bar"></div>
     <div class="bar" id="stats-bar"></div>
 </footer>
 <section id="invisible-section">
