refactor: move some code to different files and rename

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 <section id="invisible-section">
     <input type="file" id="level-loader" accept=".json,application/json" style="display:none" />
     <a id="downloader" rel="nofollow"></a>
-    <script src="script.js"></script>
-    <script src="loaders.js"></script>
+    <script src="game-logic.js"></script>
+    <script src="game-io.js"></script>
     <script src="algo.js"></script>
     <script src="extra-ui.js"></script>
 </section>
