allow exporting as SVG

--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
         <ul id="auto-pack-list"></ul>
     </div>
     <div id="export-menu" class="menu disabled">
-        <div class="heading">Export bins as figure</div>
+        <div class="heading">Export as figure</div>
         <ul id="export-list">
-            <li id="export-li-tikz">TikZ</li>
-            <li id="export-li-pdf">PDF</li>
+            <li id="export-li-svg">SVG</li>
+            <li id="export-li-tikz">TikZ (bins only)</li>
+            <li id="export-li-pdf">Print (bins only)</li>
         </ul>
     </div>
     <ul id="zoom-toolbar" class="toolbar disabled">
