--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <svg class="icon" id="export-img-icon"><title>Export as figure</title>
                 <use xlink:href="sprites.svg#fa-file-image"/></svg>
         </li>
+        <li id="edit-button" title="Creator mode">
+            <svg class="icon" id="edit-icon"><title>Creator mode</title>
+                <use xlink:href="sprites.svg#fa-edit"/></svg>
+        </li>
         <li id="about-button" title="About">?</li>
     </ul>
     <form id="ng-form" class="menu disabled">
@@ -101,6 +105,29 @@
                 <use xlink:href="sprites.svg#fa-arrows-alt-v"/></svg>
         </li>
     </ul>
+    <form id="edit-form" class="menu disabled">
+        <div class="heading">Creator mode</div>
+        <div class="options">
+            <p>Item click mode:</p>
+            <div class="input-pair">
+                <input type="radio" id="edit-radio-item-drag" name="edit-item" value="drag" checked/>
+                <label for="edit-radio-item-drag">drag</label>
+            </div>
+            <div class="input-pair">
+                <input type="radio" id="edit-radio-item-delete" name="edit-item" value="delete" />
+                <label for="edit-radio-item-delete">delete</label>
+            </div>
+            <p>Bin click mode:</p>
+            <div class="input-pair">
+                <input type="radio" id="edit-radio-bin-null" name="edit-bin" value="" checked/>
+                <label for="edit-radio-bin-null">null</label>
+            </div>
+            <div class="input-pair">
+                <input type="radio" id="edit-radio-bin-create" name="edit-bin" value="create" />
+                <label for="edit-radio-bin-create">create</label>
+            </div>
+        </div>
+    </form>
     <ul id="msg-list"></ul>
 </header>
 <main id="arena">
