enable redo button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <svg class="icon" id="undo-icon"><title>Undo</title>
                 <use xlink:href="sprites.svg#fa-undo"/></svg>
         </li>
-        <li id="redo-button" class="disabled" title="Redo" style="display: none;">
+        <li id="redo-button" class="disabled" title="Redo">
             <svg class="icon" id="redo-icon" transform="scale(-1,1)"><title>Redo</title>
                 <use xlink:href="sprites.svg#fa-undo"/></svg>
         </li>
