improve touch-handling for mouseMode change

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                 <input type="radio" id="edit-radio-item-delete" name="edit-item" value="delete" />
                 <label for="edit-radio-item-delete">delete</label>
             </div>
+            <div class="input-pair">
+                <input type="radio" id="edit-radio-item-null" name="edit-item" value="" />
+                <label for="edit-radio-item-null">null</label>
+            </div>
             <p>Bin click mode:</p>
             <div class="input-pair">
                 <input type="radio" id="edit-radio-bin-null" name="edit-bin" value="" checked/>
@@ -130,7 +134,7 @@
     </form>
     <ul id="msg-list"></ul>
 </header>
-<main id="arena">
+<main id="arena" class="item-touch">
     <div id="hover-rect"></div>
     <div id="inventory"></div>
     <div id="packing-area"></div>
