wrap bins and infer scaleFactor accordingly

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
             <svg class="icon" id="zoom-out-icon"><title>Zoom out</title>
                 <use xlink:href="sprites.svg#fa-search-minus"/></svg>
         </li>
+        <li id="zoom-fit-button" title="Fit">
+            <svg class="icon" id="zoom-fit-icon"><title>Fit</title>
+                <use xlink:href="sprites.svg#fa-arrows-alt"/></svg>
+        </li>
         <li id="zoom-x-button" title="Fit horizontally">
             <svg class="icon" id="zoom-x-icon"><title>Fit horizontally</title>
                 <use xlink:href="sprites.svg#fa-arrows-alt-h"/></svg>
