show confetti when game is won

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<canvas id="celebrate-canvas"></canvas>
 <header>
     <ul id="main-toolbar" class="toolbar">
         <li id="new-game-button" title="New game">
