--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <script defer src="extra-ui.js"></script>
 </head>
 <body>
-<canvas id="celebrate-canvas"></canvas>
-<header>
+<canvas width="0" height="0" id="celebrate-canvas"></canvas>
+<header id="main-header">
     <ul id="main-toolbar" class="toolbar">
         <li id="new-game-button" title="New game">
             <svg class="icon" id="plus-icon"><title>New game</title>
@@ -72,7 +72,9 @@
         </li>
     </ul>
     <form id="ng-form" class="menu disabled">
-        <div class="heading">Load a new game</div>
+        <header>
+            <div class="heading">Load a new game</div>
+        </header>
         <div class="options">
             <p>Levels:</p>
             <div id="ng-form-levels"></div>
@@ -97,15 +99,21 @@
         <button id="ng-submit" type="submit" disabled="disabled">Submit</button>
     </form>
     <div id="solutions-menu" class="menu disabled">
-        <div class="heading">View solutions</div>
+        <header>
+            <div class="heading">View solutions</div>
+        </header>
         <ul id="solutions-list"></ul>
     </div>
     <div id="auto-pack-menu" class="menu disabled">
-        <div class="heading">Run algorithms</div>
+        <header>
+            <div class="heading">Run algorithms</div>
+        </header>
         <ul id="auto-pack-list"></ul>
     </div>
     <div id="export-menu" class="menu disabled">
-        <div class="heading">Export as figure</div>
+        <header>
+            <div class="heading">Export as figure</div>
+        </header>
         <ul id="export-list">
             <li id="export-li-svg">SVG</li>
             <li id="export-li-tikz">TikZ (bins only)</li>
@@ -135,7 +143,9 @@
         </li>
     </ul>
     <form id="edit-form" class="menu disabled">
-        <div class="heading">Creator mode</div>
+        <header>
+            <div class="heading">Creator mode</div>
+        </header>
         <div class="options">
             <p>Item click mode:</p>
             <div class="input-pair">
