add close buttons to menus

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <form id="ng-form" class="menu disabled">
         <header>
             <div class="heading">Load a new game</div>
+            <div class="close-btn"></div>
         </header>
         <div class="options">
             <p>Levels:</p>
@@ -101,18 +102,21 @@
     <div id="solutions-menu" class="menu disabled">
         <header>
             <div class="heading">View solutions</div>
+            <div class="close-btn"></div>
         </header>
         <ul id="solutions-list"></ul>
     </div>
     <div id="auto-pack-menu" class="menu disabled">
         <header>
             <div class="heading">Run algorithms</div>
+            <div class="close-btn"></div>
         </header>
         <ul id="auto-pack-list"></ul>
     </div>
     <div id="export-menu" class="menu disabled">
         <header>
             <div class="heading">Export as figure</div>
+            <div class="close-btn"></div>
         </header>
         <ul id="export-list">
             <li id="export-li-svg">SVG</li>
@@ -145,6 +149,7 @@
     <form id="edit-form" class="menu disabled">
         <header>
             <div class="heading">Creator mode</div>
+            <div class="close-btn"></div>
         </header>
         <div class="options">
             <p>Item click mode:</p>
