style: add css for dark mode

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script defer src="algo.js"></script>
 <script defer src="extra-ui.js"></script>
 </head>
-<body>
+<body class="light">
 <canvas width="0" height="0" id="celebrate-canvas"></canvas>
 <header id="main-header">
     <ul id="main-toolbar" class="toolbar">
