allow toggling dark mode

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
                 <use xlink:href="sprites.svg#fa-edit"/></svg>
             <span class="label">Edit</span>
         </li>
+        <li id="dark-mode-button">
+            <svg class="icon light-only" id="moon-icon"><title>Switch to dark mode</title>
+                <use xlink:href="sprites.svg#fa-moon"/></svg>
+            <span class="label light-only">Dark</span>
+            <svg class="icon dark-only" id="sun-icon"><title>Switch to light mode</title>
+                <use xlink:href="sprites.svg#fa-sun"/></svg>
+            <span class="label dark-only">Light</span>
+        </li>
         <li id="about-button" title="About">
             <svg class="icon" id="about-icon"><title>About</title>
                 <use xlink:href="sprites.svg#fa-question"/></svg>
