improve about button

--- a/index.html
+++ b/index.html
@@ -217,6 +217,23 @@
             <li id="export-li-pdf">Print (bins only)</li>
         </ul>
     </div>
+    <div id="about-menu" class="menu disabled">
+        <header>
+            <div class="heading">About this game</div>
+            <div class="close-btn"></div>
+        </header>
+        <div class="menu-body">
+            <p>
+This is a 2D geometric bin-packing game. You have to pack all items
+from the left side into the minimum number of bins on the right side.
+            </p>
+            <p>
+You can find the source code and documentation of the game at
+<a href="https://github.com/sharmaeklavya2/packing-game">
+https://github.com/sharmaeklavya2/packing-game</a>.
+            </p>
+        </div>
+    </div>
     <div id="modal-overlay" class="overlay"></div>
     <div class="gas"></div>
 </section>
