--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
     <div id="inventory"></div>
     <div id="packing-area"></div>
 </main>
+<noscript>
+<p class="large">Please
+<a href="https://www.enable-javascript.com">enable JavaScript</a>
+to run this game.</p>
+<p>Source code of this game is at
+<a href="https://github.com/sharmaeklavya2/packing-game">
+https://github.com/sharmaeklavya2/packing-game</a>.</p>
+</noscript>
 <div class="gas"></div>
 <footer id="footer">
     <div class="bar disabled" id="item-info-bar"></div>
